--- a/admin/order-detail.html
+++ b/admin/order-detail.html
@@ -426,7 +426,7 @@
             </div>
             <div class="info-item">
               <div class="info-label">Số điện thoại</div>
-              <div class="info-value">0123-456-789</div>
+              <div class="info-value">0192837465</div>
             </div>
             <div class="info-item">
               <div class="info-label">Email</div>
@@ -434,7 +434,7 @@
             </div>
             <div class="info-item">
               <div class="info-label">Địa chỉ</div>
-              <div class="info-value">123 Đường ABC, Quận XYZ, TP. Hồ Chí Minh</div>
+              <div class="info-value">255 Nguyễn Sơn, TP. Hồ Chí Minh</div>
             </div>
           </div>
         </div>
@@ -449,7 +449,7 @@
             </div>
             <div class="info-item">
               <div class="info-label">Ngày đặt hàng</div>
-              <div class="info-value">01-08-2025</div>
+              <div class="info-value">22-11-2025</div>
             </div>
             <div class="info-item">
               <div class="info-label">Trạng thái</div>
