--- a/admin/add-category.html
+++ b/admin/add-category.html
@@ -271,7 +271,7 @@
             <div class="form-group">
               <label for="categoryName" class="form-label">Tên danh mục <span style="color:#dc3545;">*</span></label>
               <input type="text" class="form-control" id="categoryName" name="categoryName"
-                placeholder="Nhập tên danh mục" required>
+                placeholder="Nhập tên danh mục">
             </div>
 
             <div class="form-group">
