--- a/admin/chef.html
+++ b/admin/chef.html
@@ -436,7 +436,7 @@
           <tr>
             <td>1</td>
             <td>John Constatine<br /></td>
-            <td>Đầu bếp chính</td>
+            <td>Đầu bếp</td>
             <td>
               <span class="status-icon active"></span>
             </td>
@@ -472,7 +472,7 @@
           <tr>
             <td>3</td>
             <td>Jane Doe<br /></td>
-            <td>Đầu bếp chính</td>
+            <td>Đầu bếp</td>
             <td><i class="material-icons-round lock-icon">lock</i></td>
             <td>
               <div class="actions">
