--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               >Sản phẩm</a
             >
             <a href="pages/team.html" class="nav-item nav-link"
-              >Đầu bếp chính</a
+              >Đầu bếp</a
             >
 
             <a href="pages/contact.html" class="nav-item nav-link">Liên hệ</a>
@@ -795,7 +795,7 @@
               </div>
               <div class="bg-dark border-inner text-center p-4">
                 <h4 class="text-uppercase text-primary">John Constatine</h4>
-                <p class="text-white m-0">Đầu bếp chính</p>
+                <p class="text-white m-0">Đầu bếp</p>
               </div>
             </div>
           </div>
@@ -859,7 +859,7 @@
               </div>
               <div class="bg-dark border-inner text-center p-4">
                 <h4 class="text-uppercase text-primary">Jane Doe</h4>
-                <p class="text-white m-0">Đầu bếp chính</p>
+                <p class="text-white m-0">Đầu bếp</p>
               </div>
             </div>
           </div>
@@ -949,7 +949,7 @@
               </div>
               <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                 <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
-                <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
+                <p></p>
                 <form action="">
                   <div class="input-group">
                     <input
