--- a/pages/testimonial.html
+++ b/pages/testimonial.html
@@ -78,8 +78,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                <a href="../index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About Us</a>
+                <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
+                <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
                 <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
                 <a href="team.html" class="nav-item nav-link">Master Chefs</a>
                 <div class="nav-item dropdown">
@@ -101,7 +101,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-uppercase text-white">Testimonial</h1>
-                <a href="">Home</a>
+                <a href="">Trang chủ</a>
                 <i class="far fa-square text-primary px-2"></i>
                 <a href="">Testimonial</a>
             </div>
@@ -222,7 +222,7 @@
                             <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-secondary mb-2" href="loggedin.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                        class="bi bi-arrow-right text-primary me-2"></i>Trang chủ</a>
                                 <a class="text-secondary mb-2" href="about-logged.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>About
                                     Us</a>
@@ -234,12 +234,12 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
-                            <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
+                            <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
+                            <p></p>
                             <form action="">
                                 <div class="input-group">
-                                    <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                                    <button class="btn btn-primary">Sign Up</button>
+                                    <input type="text" class="form-control border-white p-3" placeholder="Email">
+                                    <button class="btn btn-primary">Đăng ký</button>
                                 </div>
                             </form>
                         </div>
