--- a/admin/chef-detail-johnconstatine.html
+++ b/admin/chef-detail-johnconstatine.html
@@ -415,7 +415,7 @@
 
       <div class="form-group" style="flex:1;">
         <label for="position">Vị trí</label>
-        <input type="text" id="position" class="form-control" value="Đầu bếp chính">
+        <input type="text" id="position" class="form-control" value="Đầu bếp">
       </div>
     </div>
 
