--- a/admin/import-add.html
+++ b/admin/import-add.html
@@ -58,6 +58,10 @@
       font-weight: 600;
     }
 
+    .btn-primary mt-3 {
+      background-color: #2D2D2D;
+    }
+
     .btn-dark:hover {
       background-color: #333;
     }
@@ -971,7 +975,7 @@
           </div>
           <h3 class="fw-bold mb-2">Tạo phiếu nhập thành công!</h3>
           <p>Phiếu nhập của bạn đã được lưu thành công.</p>
-          <button type="button" class="btn btn-primary mt-3" id="modalOkBtn">OK</button>
+          <button type="button" class="btn btn-primary mt-3btn-primary mt-3" id="modalOkBtn">OK</button>
         </div>
       </div>
     </div>
