--- a/pages/contact.html
+++ b/pages/contact.html
@@ -95,11 +95,11 @@
           <div class="navbar-nav ms-auto mx-lg-auto py-0">
             <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
             <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
-            <a href="birthday-cake-1.html" class="nav-item nav-link active"
+            <a href="birthday-cake-1.html" class="nav-item nav-link "
               >Sản phẩm</a
             >
             <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
-            <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+            <a href="contact.html" class="nav-item nav-link active">Liên hệ</a>
           </div>
           <div class="navbar-nav ms-auto">
             <a href="login.html" class="nav-item nav-link">Đăng nhập</a>
@@ -188,9 +188,9 @@
     <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content text-center p-4">
-                <h5 class="modal-title mb-3" id="successModalLabel">Message Sent</h5>
-                <p>Thank you for your response!</p>
-                <button type="button" class="btn-close-custom mt-3" data-bs-dismiss="modal">Close</button>
+                <h5 class="modal-title mb-3" id="successModalLabel">Đã gửi thư</h5>
+                <p>Cảm ơn vì phản hồi của bạn!</p>
+                <button type="button" class="btn-close-custom mt-3" data-bs-dismiss="modal">Đóng</button>
             </div>
         </div>
     </div>
@@ -206,10 +206,8 @@
                             <h1 class="m-0 text-uppercase text-white"><i
                                     class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                         </a>
-                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore
-                            stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum
-                            et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd
-                            eos duo dolore no.</p>
+                        <p class="mt-3" style="text-align: justify">
+                Chào mừng bạn đến với CakeZone – không gian của những hương vị ngọt ngào và tinh tế. Chúng tôi mang đến những chiếc bánh sinh nhật, bánh cưới và bánh ngọt cao cấp như mousse, flan, gato, được chế biến tỉ mỉ từ nguyên liệu tươi ngon mỗi ngày. Tại CakeZone, mỗi chiếc bánh không chỉ là món ăn, mà còn là món quà mang theo niềm vui và sự yêu thương.</p>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
@@ -253,7 +251,7 @@
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
-                            <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
+                            <p></p>
                             <form action="">
                                 <div class="input-group">
                                     <input type="text" class="form-control border-white p-3" placeholder="Email">
