--- a/pages/edit-info.html
+++ b/pages/edit-info.html
@@ -273,60 +273,51 @@
     <!-- Topbar End -->
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
-        <div class="container-fluid">
-            <!-- Nút toggle cho mobile -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+    <div class="container-fluid">
+      <!-- Nút toggle cho mobile -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <!-- Các menu đang có -->
-                <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="loggedin.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item">Our Service</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-                </div>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav ms-auto mx-lg-auto py-0">
+          <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+          <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
+          <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Sản phẩm</a>
+          <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
+          <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
+        </div>
 
-                <!-- Shopping cart + Avatar menu bên phải -->
-                <div class="navbar-nav ms-3">
-                    <!-- Shopping cart -->
-                    <a href="cart.html" class="nav-link me-3">
-                        <img src="../img/shopping-cart-white.png" alt="Cart"
-                            style="width: 40px; height: 40px; object-fit: cover" />
-                    </a>
+        <!-- Shopping cart + Avatar menu bên phải -->
+        <div class="navbar-nav ms-3">
+          <!-- Shopping cart -->
+          <a href="cart.html" class="nav-link me-3">
+            <img src="../img/shopping-cart-white.png" alt="Cart" style="width: 40px; height: 40px; object-fit: cover" />
+          </a>
 
-                    <!-- Avatar -->
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link" data-bs-toggle="dropdown">
-                            <img src="../img/human_white.png" alt="User" style="
+          <!-- Avatar -->
+          <div class="nav-item dropdown">
+            <a href="#" class="nav-link" data-bs-toggle="dropdown">
+              <img src="../img/human_white.png" alt="User" style="
                     width: 40px;
                     height: 40px;
                     border-radius: 0%;
                     object-fit: cover;
                   " />
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end m-0">
-                            <a href="profile.html" class="dropdown-item">Thông tin</a>
-                            <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
-                            <div class="dropdown-divider"></div>
-                            <a href="../index.html" class="dropdown-item">Đăng xuất</a>
-                        </div>
-                    </div>
-                </div>
+            </a>
+            <div class="dropdown-menu dropdown-menu-end m-0">
+              <a href="profile.html" class="dropdown-item">Thông tin</a>
+              <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
+              <div class="dropdown-divider"></div>
+              <a href="../index.html" class="dropdown-item">Đăng xuất</a>
             </div>
+          </div>
         </div>
-    </nav>
-    <!-- Navbar End -->
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar End -->
 
     <br />
     <div class="container">
@@ -415,76 +406,123 @@
 
     <!-- Footer Start -->
     <div class="container-fluid bg-img text-secondary" style="margin-top: 90px">
-        <div class="container">
-            <div class="row gx-5">
-                <div class="col-lg-4 col-md-6 mb-lg-n5">
-                    <div
-                        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-                        <a href="../index.html" class="navbar-brand">
-                            <h1 class="m-0 text-uppercase text-white">
-                                <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
-                            </h1>
-                        </a>
-                        <p class="mt-3">
-                            We create the most delicious custom cakes for birthdays and
-                            special celebrations.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-8 col-md-6">
-                    <div class="row gx-5">
-                        <div class="col-lg-4 col-md-12 pt-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-geo-alt text-primary me-2"></i>
-                                <p class="mb-0">123 Street, New York, USA</p>
-                            </div>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-envelope-open text-primary me-2"></i>
-                                <p class="mb-0">info@example.com</p>
-                            </div>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-telephone text-primary me-2"></i>
-                                <p class="mb-0">+012 345 67890</p>
-                            </div>
-                            <div class="d-flex mt-4">
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
-                                        class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
-                                        class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
-                                        class="fab fa-linkedin-in fw-normal"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
-                            <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="../index.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="about.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About
-                                    Us</a>
-                                <a class="text-secondary mb-2" href="menu.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Menu &
-                                    Pricing</a>
-                                <a class="text-secondary mb-2" href="contact.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
-                                    Us</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
-                            <form action="">
-                                <div class="input-group">
-                                    <input type="text" class="form-control border-white p-3" placeholder="Your Email" />
-                                    <button class="btn btn-primary">Sign Up</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row gx-5">
+          <div class="col-lg-4 col-md-6 mb-lg-n5">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4"
+            >
+              <a href="index.html" class="navbar-brand">
+                <h1 class="m-0 text-uppercase text-white">
+                  <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i
+                  >CakeZone
+                </h1>
+              </a>
+              <p class="mt-3" style="text-align: justify">
+                Chào mừng bạn đến với CakeZone – không gian của những hương vị
+                ngọt ngào và tinh tế. Chúng tôi mang đến những chiếc bánh sinh
+                nhật, bánh cưới và bánh ngọt cao cấp như mousse, flan, gato,
+                được chế biến tỉ mỉ từ nguyên liệu tươi ngon mỗi ngày. Tại
+                CakeZone, mỗi chiếc bánh không chỉ là món ăn, mà còn là món quà
+                mang theo niềm vui và sự yêu thương.
+              </p>
             </div>
+          </div>
+          <div class="col-lg-8 col-md-6">
+            <div class="row gx-5">
+              <div class="col-lg-4 col-md-12 pt-5 mb-5">
+                <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-geo-alt text-primary me-2"></i>
+                  <p class="mb-0">123 Street, New York, USA</p>
+                </div>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-envelope-open text-primary me-2"></i>
+                  <p class="mb-0">info@example.com</p>
+                </div>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-telephone text-primary me-2"></i>
+                  <p class="mb-0">+012 345 67890</p>
+                </div>
+                <div class="d-flex mt-4">
+                  <a
+                    class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2"
+                    href="#"
+                    ><i class="fab fa-twitter fw-normal"></i
+                  ></a>
+                  <a
+                    class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2"
+                    href="#"
+                    ><i class="fab fa-facebook-f fw-normal"></i
+                  ></a>
+                  <a
+                    class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2"
+                    href="#"
+                    ><i class="fab fa-linkedin-in fw-normal"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
+                <div class="d-flex flex-column justify-content-start">
+                  <a class="text-secondary mb-2" href="index.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Trang
+                    chủ</a
+                  >
+                  <a class="text-secondary mb-2" href="pages/about.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Giới
+                    thiệu</a
+                  >
+                  <a class="text-secondary mb-2" href="pages/team.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp
+                    chính</a
+                  >
+                  <a class="text-secondary mb-2" href="pages/contact.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Liên
+                    hệ</a
+                  >
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
+                <p></p>
+                <form action="">
+                  <div class="input-group">
+                    <input
+                      type="text"
+                      class="form-control border-white p-3"
+                      placeholder="Email"
+                    />
+                    <button class="btn btn-primary">Đăng ký</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+    <div
+      class="container-fluid text-secondary py-4"
+      style="background: #111111"
+    >
+      <div class="container text-center">
+        <p class="mb-0">
+          &copy;
+          <a class="text-white border-bottom" href="#">Your Site Name</a>. All
+          Rights Reserved.
+
+          <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+          Designed by
+          <a class="text-white border-bottom" href="https://htmlcodex.com"
+            >HTML Codex</a
+          >
+        </p>
+        <br />Distributed By:
+        <a class="border-bottom" href="https://themewagon.com" target="_blank"
+          >ThemeWagon</a
+        >
+      </div>
     </div>
     <!-- Footer End -->
 
