--- a/pages/login-cart.html
+++ b/pages/login-cart.html
@@ -69,9 +69,9 @@
       <p>Not a member? <a href="signup.html">Register</a></p>
     </div>
 
-    <!-- Home -->
+    <!-- Trang chủ -->
     <div class="text-center">
-      <a href="../index.html">Home</a>
+      <a href="../index.html">Trang chủ</a>
     </div>
   </form>
 
