--- a/pages/login.html
+++ b/pages/login.html
@@ -80,7 +80,7 @@
         <p>Chưa có tài khoản? <a href="signup.html">Đăng ký</a></p>
       </div>
 
-      <!-- Home -->
+      <!-- Trang chủ -->
       <div class="text-center">
         <a href="../index.html">Trang chủ</a>
       </div>
@@ -92,7 +92,7 @@
     <script>
   // Lấy URL muốn redirect sau khi login
   const urlParams = new URLSearchParams(window.location.search);
-  const redirectURL = urlParams.get("redirect") || "../index.html"; // fallback về home
+  const redirectURL = urlParams.get("redirect") || "../index.html"; // fallback về Trang chủ
 
   document.querySelector("button").addEventListener("click", function () {
     const username = document.getElementById("form2Example1").value.trim();
