--- a/pages/service.html
+++ b/pages/service.html
@@ -78,8 +78,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About Us</a>
+                <a href="index.html" class="nav-item nav-link">Trang chủ</a>
+                <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
                 <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
                 <a href="team.html" class="nav-item nav-link">Master Chefs</a>
                 <div class="nav-item dropdown">
@@ -101,7 +101,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-uppercase text-white">Services</h1>
-                <a href="">Home</a>
+                <a href="">Trang chủ</a>
                 <i class="far fa-square text-primary px-2"></i>
                 <a href="">Services</a>
             </div>
@@ -149,20 +149,25 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark bg-img text-secondary" style="margin-top: 235px">
+    <div class="container-fluid bg-img text-secondary" style="margin-top: 90px">
         <div class="container">
             <div class="row gx-5">
-                <div class="col-lg-4 col-md-6 mt-lg-n5">
+                <div class="col-lg-4 col-md-6 mb-lg-n5">
                     <div
                         class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="m-0 text-uppercase text-white"><i
-                                    class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
+                            <h1 class="m-0 text-uppercase text-white">
+                                <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
+                            </h1>
                         </a>
-                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore
-                            stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum
-                            et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd
-                            eos duo dolore no.</p>
+                        <p class="mt-3" style="text-align: justify">
+                            Chào mừng bạn đến với CakeZone – không gian của những hương vị
+                            ngọt ngào và tinh tế. Chúng tôi mang đến những chiếc bánh sinh
+                            nhật, bánh cưới và bánh ngọt cao cấp như mousse, flan, gato,
+                            được chế biến tỉ mỉ từ nguyên liệu tươi ngon mỗi ngày. Tại
+                            CakeZone, mỗi chiếc bánh không chỉ là món ăn, mà còn là món quà
+                            mang theo niềm vui và sự yêu thương.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
@@ -193,25 +198,27 @@
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="loggedin.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="about-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About
-                                    Us</a>
-                                <a class="text-secondary mb-2" href="team-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
-                                <a class="text-secondary mb-2" href="contact-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
-                                    Us</a>
+                                <a class="text-secondary mb-2" href="index.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Trang
+                                    chủ</a>
+                                <a class="text-secondary mb-2" href="pages/about.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Giới
+                                    thiệu</a>
+                                <a class="text-secondary mb-2" href="pages/team.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp
+                                    chính</a>
+                                <a class="text-secondary mb-2" href="pages/contact.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Liên
+                                    hệ</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
-                            <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
+                            <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
+                            <p></p>
                             <form action="">
                                 <div class="input-group">
-                                    <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                                    <button class="btn btn-primary">Sign Up</button>
+                                    <input type="text" class="form-control border-white p-3" placeholder="Email" />
+                                    <button class="btn btn-primary">Đăng ký</button>
                                 </div>
                             </form>
                         </div>
@@ -220,13 +227,19 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid text-secondary py-4" style="background: #111111;">
+    <div class="container-fluid text-secondary py-4" style="background: #111111">
         <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights Reserved.
+            <p class="mb-0">
+                &copy;
+                <a class="text-white border-bottom" href="#">Your Site Name</a>. All
+                Rights Reserved.
 
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                Designed by
+                <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a>
             </p>
+            <br />Distributed By:
+            <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
         </div>
     </div>
     <!-- Footer End -->
