--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sign Up Page</title>
+  <title>Đăng ký Page</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
@@ -27,27 +27,27 @@
   <form id="signupForm">
     <div class="mb-4">
       <label class="form-label" for="formName">Họ tên</label>
-      <input type="text" id="formName" class="form-control" required />
+      <input type="text" id="formName" class="form-control" />
     </div>
 
     <div class="mb-4">
       <label class="form-label" for="formUsername">Tên đăng nhập</label>
-      <input type="text" id="formUsername" class="form-control" required />
+      <input type="text" id="formUsername" class="form-control" />
     </div>
 
     <div class="mb-4">
       <label class="form-label" for="formEmail">Email</label>
-      <input type="email" id="formEmail" class="form-control" required />
+      <input type="email" id="formEmail" class="form-control" />
     </div>
 
     <div class="mb-4">
       <label class="form-label" for="formPassword">Mật khẩu</label>
-      <input type="password" id="formPassword" class="form-control" required />
+      <input type="password" id="formPassword" class="form-control" />
     </div>
 
     <div class="mb-4">
       <label class="form-label" for="formRepeatPassword">Nhập lại mật khẩu</label>
-      <input type="password" id="formRepeatPassword" class="form-control" required />
+      <input type="password" id="formRepeatPassword" class="form-control" />
     </div>
 
     <div class="mb-4">
