--- a/pages/team-logged.html
+++ b/pages/team-logged.html
@@ -154,7 +154,7 @@
                         </div>
                         <div class="bg-dark border-inner text-center p-4">
                             <h4 class="text-uppercase text-primary">John Constatine</h4>
-                            <p class="text-white m-0">Đầu bếp chính</p>
+                            <p class="text-white m-0">Đầu bếp</p>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                         </div>
                         <div class="bg-dark border-inner text-center p-4">
                             <h4 class="text-uppercase text-primary">Jane Doe</h4>
-                            <p class="text-white m-0">Đầu bếp chính</p>
+                            <p class="text-white m-0">Đầu bếp</p>
                         </div>
                     </div>
                 </div>
@@ -209,85 +209,124 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark bg-img text-secondary" style="margin-top: 90px">
-        <div class="container">
-            <div class="row gx-5">
-                <div class="col-lg-4 col-md-6 mt-lg-n5">
-                    <div
-                        class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-                        <a href="../index.html" class="navbar-brand">
-                            <h1 class="m-0 text-uppercase text-white"><i
-                                    class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
-                        </a>
-                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore
-                            stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum
-                            et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd
-                            eos duo dolore no.</p>
-                    </div>
-                </div>
-                <div class="col-lg-8 col-md-6">
-                    <div class="row gx-5">
-                        <div class="col-lg-4 col-md-12 pt-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-geo-alt text-primary me-2"></i>
-                                <p class="mb-0">123 Street, New York, USA</p>
-                            </div>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-envelope-open text-primary me-2"></i>
-                                <p class="mb-0">info@example.com</p>
-                            </div>
-                            <div class="d-flex mb-2">
-                                <i class="bi bi-telephone text-primary me-2"></i>
-                                <p class="mb-0">+012 345 67890</p>
-                            </div>
-                            <div class="d-flex mt-4">
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
-                                        class="fab fa-twitter fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
-                                        class="fab fa-facebook-f fw-normal"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i
-                                        class="fab fa-linkedin-in fw-normal"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
-                            <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="loggedin.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="about-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About
-                                    Us</a>
-                                <a class="text-secondary mb-2" href="team-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
-                                <a class="text-secondary mb-2" href="contact-logged.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
-                                    Us</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
-                            <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
-                            <form action="">
-                                <div class="input-group">
-                                    <input type="text" class="form-control border-white p-3" placeholder="Your Email">
-                                    <button class="btn btn-primary">Sign Up</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-fluid bg-img text-secondary" style="margin-top: 90px">
+      <div class="container">
+        <div class="row gx-5">
+          <div class="col-lg-4 col-md-6 mb-lg-n5">
+            <div
+              class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4"
+            >
+              <a href="index.html" class="navbar-brand">
+                <h1 class="m-0 text-uppercase text-white">
+                  <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i
+                  >CakeZone
+                </h1>
+              </a>
+              <p class="mt-3" style="text-align: justify">
+                Chào mừng bạn đến với CakeZone – không gian của những hương vị
+                ngọt ngào và tinh tế. Chúng tôi mang đến những chiếc bánh sinh
+                nhật, bánh cưới và bánh ngọt cao cấp như mousse, flan, gato,
+                được chế biến tỉ mỉ từ nguyên liệu tươi ngon mỗi ngày. Tại
+                CakeZone, mỗi chiếc bánh không chỉ là món ăn, mà còn là món quà
+                mang theo niềm vui và sự yêu thương.
+              </p>
             </div>
+          </div>
+          <div class="col-lg-8 col-md-6">
+            <div class="row gx-5">
+              <div class="col-lg-4 col-md-12 pt-5 mb-5">
+                <h4 class="text-primary text-uppercase mb-4">Liên hệ</h4>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-geo-alt text-primary me-2"></i>
+                  <p class="mb-0">123 Street, New York, USA</p>
+                </div>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-envelope-open text-primary me-2"></i>
+                  <p class="mb-0">info@example.com</p>
+                </div>
+                <div class="d-flex mb-2">
+                  <i class="bi bi-telephone text-primary me-2"></i>
+                  <p class="mb-0">+012 345 67890</p>
+                </div>
+                <div class="d-flex mt-4">
+                  <a
+                    class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2"
+                    href="#"
+                    ><i class="fab fa-twitter fw-normal"></i
+                  ></a>
+                  <a
+                    class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2"
+                    href="#"
+                    ><i class="fab fa-facebook-f fw-normal"></i
+                  ></a>
+                  <a
+                    class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2"
+                    href="#"
+                    ><i class="fab fa-linkedin-in fw-normal"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
+                <div class="d-flex flex-column justify-content-start">
+                  <a class="text-secondary mb-2" href="index.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Trang
+                    chủ</a
+                  >
+                  <a class="text-secondary mb-2" href="pages/about.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Giới
+                    thiệu</a
+                  >
+                  <a class="text-secondary mb-2" href="pages/team.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp
+                    chính</a
+                  >
+                  <a class="text-secondary mb-2" href="pages/contact.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Liên
+                    hệ</a
+                  >
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
+                <p></p>
+                <form action="">
+                  <div class="input-group">
+                    <input
+                      type="text"
+                      class="form-control border-white p-3"
+                      placeholder="Email"
+                    />
+                    <button class="btn btn-primary">Đăng ký</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-    <div class="container-fluid text-secondary py-4" style="background: #111111;">
-        <div class="container text-center">
-            <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights Reserved.
+    <div
+      class="container-fluid text-secondary py-4"
+      style="background: #111111"
+    >
+      <div class="container text-center">
+        <p class="mb-0">
+          &copy;
+          <a class="text-white border-bottom" href="#">Your Site Name</a>. All
+          Rights Reserved.
 
-                <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-            </p>
-        </div>
+          <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+          Designed by
+          <a class="text-white border-bottom" href="https://htmlcodex.com"
+            >HTML Codex</a
+          >
+        </p>
+        <br />Distributed By:
+        <a class="border-bottom" href="https://themewagon.com" target="_blank"
+          >ThemeWagon</a
+        >
+      </div>
     </div>
     <!-- Footer End -->
 
