--- a/pages/team.html
+++ b/pages/team.html
@@ -92,10 +92,10 @@
           <div class="navbar-nav ms-auto mx-lg-auto py-0">
             <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
             <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
-            <a href="birthday-cake-1.html" class="nav-item nav-link active"
+            <a href="birthday-cake-1.html" class="nav-item nav-link "
               >Sản phẩm</a
             >
-            <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
+            <a href="team.html" class="nav-item nav-link active">Đầu bếp</a>
             <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
           </div>
           <div class="navbar-nav ms-auto">
@@ -114,7 +114,7 @@
           <h1 class="display-4 text-uppercase text-white">Đầu bếp</h1>
           <a href="../index.html">Trang chủ</a>
           <i class="far fa-square text-primary px-2"></i>
-          <a href="team.html">Đầu bếp chính</a>
+          <a href="team.html">Đầu bếp</a>
         </div>
       </div>
     </div>
@@ -233,28 +233,26 @@
     <!-- Team End -->
 
     <!-- Footer Start -->
-    <div
-      class="container-fluid bg-dark bg-img text-secondary"
-      style="margin-top: 90px"
-    >
+    <div class="container-fluid bg-img text-secondary" style="margin-top: 90px">
       <div class="container">
         <div class="row gx-5">
-          <div class="col-lg-4 col-md-6 mt-lg-n5">
+          <div class="col-lg-4 col-md-6 mb-lg-n5">
             <div
               class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4"
             >
-              <a href="../index.html" class="navbar-brand">
+              <a href="index.html" class="navbar-brand">
                 <h1 class="m-0 text-uppercase text-white">
                   <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i
                   >CakeZone
                 </h1>
               </a>
-              <p class="mt-3">
-                Lorem diam sit erat dolor elitr et, diam lorem justo labore amet
-                clita labore stet eos magna sit. Elitr dolor eirmod duo tempor
-                lorem, elitr clita ipsum sea. Nonumy rebum et takimata ea
-                takimata amet gubergren, erat rebum magna lorem stet eos. Diam
-                amet et kasd eos duo dolore no.
+              <p class="mt-3" style="text-align: justify">
+                Chào mừng bạn đến với CakeZone – không gian của những hương vị
+                ngọt ngào và tinh tế. Chúng tôi mang đến những chiếc bánh sinh
+                nhật, bánh cưới và bánh ngọt cao cấp như mousse, flan, gato,
+                được chế biến tỉ mỉ từ nguyên liệu tươi ngon mỗi ngày. Tại
+                CakeZone, mỗi chiếc bánh không chỉ là món ăn, mà còn là món quà
+                mang theo niềm vui và sự yêu thương.
               </p>
             </div>
           </div>
@@ -295,34 +293,35 @@
               <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                 <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                 <div class="d-flex flex-column justify-content-start">
-                  <a class="text-secondary mb-2" href="loggedin.html"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Home</a
+                  <a class="text-secondary mb-2" href="index.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Trang
+                    chủ</a
                   >
-                  <a class="text-secondary mb-2" href="about-logged.html"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>About
-                    Us</a
+                  <a class="text-secondary mb-2" href="pages/about.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Giới
+                    thiệu</a
                   >
-                  <a class="text-secondary mb-2" href="team-logged.html"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Master
-                    Chefs</a
+                  <a class="text-secondary mb-2" href="pages/team.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp
+                    chính</a
                   >
-                  <a class="text-secondary mb-2" href="contact-logged.html"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Contact
-                    Us</a
+                  <a class="text-secondary mb-2" href="pages/contact.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>Liên
+                    hệ</a
                   >
                 </div>
               </div>
               <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                <h4 class="text-primary text-uppercase mb-4">Newsletter</h4>
-                <p>Amet justo diam dolor rebum lorem sit stet sea justo kasd</p>
+                <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
+                <p></p>
                 <form action="">
                   <div class="input-group">
                     <input
                       type="text"
                       class="form-control border-white p-3"
-                      placeholder="Your Email"
+                      placeholder="Email"
                     />
-                    <button class="btn btn-primary">Sign Up</button>
+                    <button class="btn btn-primary">Đăng ký</button>
                   </div>
                 </form>
               </div>
@@ -347,6 +346,10 @@
             >HTML Codex</a
           >
         </p>
+        <br />Distributed By:
+        <a class="border-bottom" href="https://themewagon.com" target="_blank"
+          >ThemeWagon</a
+        >
       </div>
     </div>
     <!-- Footer End -->
