--- a/pages/wedding-cake-3-logged.html
+++ b/pages/wedding-cake-3-logged.html
@@ -465,14 +465,18 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="loggedin.html" class="navbar-brand">
+            <a href="index.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
             </a>
-            <p class="mt-3">
-              We create the most delicious cakes for birthdays and special
-              celebrations.
+            <p class="mt-3" style="text-align: justify">
+              Chào mừng bạn đến với CakeZone – không gian của những hương vị
+              ngọt ngào và tinh tế. Chúng tôi mang đến những chiếc bánh sinh
+              nhật, bánh cưới và bánh ngọt cao cấp như mousse, flan, gato,
+              được chế biến tỉ mỉ từ nguyên liệu tươi ngon mỗi ngày. Tại
+              CakeZone, mỗi chiếc bánh không chỉ là món ăn, mà còn là món quà
+              mang theo niềm vui và sự yêu thương.
             </p>
           </div>
         </div>
@@ -504,21 +508,23 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="loggedin.html"><i
+                <a class="text-secondary mb-2" href="index.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Trang
                   chủ</a>
-                <a class="text-secondary mb-2" href="about-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Giới
-                  thiệu Us</a>
-                <a class="text-secondary mb-2" href="birthday-cake-1-logged.html"><i
-                    class="bi bi-arrow-right text-primary me-2"></i>Sản
-                  phẩm</a>
-                <a class="text-secondary mb-2" href="contact-logged.html"><i
+                <a class="text-secondary mb-2" href="pages/about.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Giới
+                  thiệu</a>
+                <a class="text-secondary mb-2" href="pages/team.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp
+                  chính</a>
+                <a class="text-secondary mb-2" href="pages/contact.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Liên
                   hệ</a>
               </div>
             </div>
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-              <h4 class="text-primary text-uppercase mb-4">Nhận thông báo</h4>
+              <h4 class="text-primary text-uppercase mb-4">Thông báo</h4>
+              <p></p>
               <form action="">
                 <div class="input-group">
                   <input type="text" class="form-control border-white p-3" placeholder="Email" />
@@ -531,49 +537,56 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid text-secondary py-4" style="background: #111111">
+    <div class="container text-center">
+      <p class="mb-0">
+        &copy;
+        <a class="text-white border-bottom" href="#">Your Site Name</a>. All
+        Rights Reserved.
+
+        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+        Designed by
+        <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+      </p>
+      <br />Distributed By:
+      <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+    </div>
+  </div>
   <!-- Footer End -->
 
   <!-- Bootstrap Modal -->
-    <div
-      class="modal fade"
-      id="cartSuccessModal"
-      tabindex="-1"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content text-center p-4">
-          <div class="modal-body">
-            <i
-              class="bi bi-check-circle-fill text-success"
-              style="font-size: 4rem"
-            ></i>
-            <h3 class="mt-3">Thêm vào giỏ hàng thành công!</h3>
-            <p>Sản phẩm đã được thêm vào giỏ hàng của bạn.</p>
-            <button type="button" class="btn btn-primary mt-3" id="modalOkBtn">
-              OK
-            </button>
-          </div>
+  <div class="modal fade" id="cartSuccessModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content text-center p-4">
+        <div class="modal-body">
+          <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem"></i>
+          <h3 class="mt-3">Thêm vào giỏ hàng thành công!</h3>
+          <p>Sản phẩm đã được thêm vào giỏ hàng của bạn.</p>
+          <button type="button" class="btn btn-primary mt-3" id="modalOkBtn">
+            OK
+          </button>
         </div>
       </div>
     </div>
+  </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const addToCartBtn = document.getElementById("addToCartBtn");
-        const modalEl = document.getElementById("cartSuccessModal");
-        const modalOkBtn = document.getElementById("modalOkBtn");
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const addToCartBtn = document.getElementById("addToCartBtn");
+      const modalEl = document.getElementById("cartSuccessModal");
+      const modalOkBtn = document.getElementById("modalOkBtn");
 
-        const successModal = new bootstrap.Modal(modalEl);
+      const successModal = new bootstrap.Modal(modalEl);
 
-        addToCartBtn.addEventListener("click", () => {
-          successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng
-        });
-
-        modalOkBtn.addEventListener("click", () => {
-          successModal.hide(); // Ẩn modal khi bấm OK
-        });
+      addToCartBtn.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Thêm vào giỏ hàng
       });
-    </script>
+
+      modalOkBtn.addEventListener("click", () => {
+        successModal.hide(); // Ẩn modal khi bấm OK
+      });
+    });
+  </script>
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -587,22 +600,20 @@
       .querySelector(".btn.btn-primary i.fa-filter")
       ?.parentElement.addEventListener("click", function () {
         const min = parseInt(document.getElementById("priceMin").value) || 0;
-        const max =
-          parseInt(document.getElementById("priceMax").value) || Infinity;
+        const max = parseInt(document.getElementById("priceMax").value) || Infinity;
 
-        const cakes = document.querySelectorAll(".card");
+        // chọn các thẻ cột chứa card
+        const cakeCols = document.querySelectorAll(".col-12.col-sm-6.col-md-3");
 
-        cakes.forEach((card) => {
+        cakeCols.forEach((col) => {
           const priceText =
-            card.querySelector("h5.fw-semibold.text-primary")?.textContent ||
-            "";
-          const price = parseInt(priceText.replace(/[^\d]/g, "")); // lấy số từ chuỗi "320.000 ₫"
+            col.querySelector("h5.fw-semibold.text-primary")?.textContent || "";
+          const price = parseInt(priceText.replace(/[^\d]/g, "")); // ví dụ: "320.000 ₫" -> 320000
 
           if (price >= min && price <= max) {
-            card.closest(".col-12, .col-sm-6, .col-md-3").style.display = "";
+            col.style.display = "block"; // hoặc "" để trả về mặc định
           } else {
-            card.closest(".col-12, .col-sm-6, .col-md-3").style.display =
-              "none";
+            col.style.display = "none";
           }
         });
       });
