--- a/pages/birthday-cake-1.html
+++ b/pages/birthday-cake-1.html
@@ -62,7 +62,7 @@
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
             <h6 class="text-uppercase mb-1">Email</h6>
-            <span>info@example.com</span>
+            <span>cakezone@gmail.com</span>
           </div>
         </div>
       </div>
@@ -474,7 +474,7 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                <p class="mb-0">info@example.com</p>
+                <p class="mb-0">cakezone@gmail.com</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-telephone text-primary me-2"></i>
