--- a/pages/birthday-cake-detail-1-logged.html
+++ b/pages/birthday-cake-detail-1-logged.html
@@ -131,13 +131,13 @@
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
             <h6 class="text-uppercase mb-1">Email</h6>
-            <span>info@example.com</span>
+            <span>cakezone@gmail.com</span>
           </div>
         </div>
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="../index.html" class="navbar-brand">
+          <a href="loggedin.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -167,11 +167,11 @@
 
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
-          <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
-          <a href="birthday-cake-1.html" class="nav-item nav-link active">Sản phẩm</a>
-          <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
-          <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+          <a href="loggedin.html" class="nav-item nav-link">Trang chủ</a>
+          <a href="about-logged.html" class="nav-item nav-link">Giới thiệu</a>
+          <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Sản phẩm</a>
+          <a href="team-logged.html" class="nav-item nav-link">Đầu bếp</a>
+          <a href="contact-logged.html" class="nav-item nav-link">Liên hệ</a>
         </div>
 
         <!-- Shopping cart + Avatar menu bên phải -->
@@ -210,7 +210,7 @@
       <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb">
           <li class="breadcrumb-item mb-0">
-            <a href="../index.html" class="text-decoration-none text-primary fw-semibold">
+            <a href="loggedin.html" class="text-decoration-none text-primary fw-semibold">
               <i class="bi bi-house-door-fill me-1"></i> Trang chủ
             </a>
           </li>
@@ -250,16 +250,16 @@
           <li><strong>Đặc biệt:</strong> Trang trí bằng dâu tây tươi, có thể thêm chữ chúc mừng theo yêu cầu</li>
         </ul>
 
-        <div class="mb-4 d-flex align-items-center gap-3">
-          <div>
-            <label for="quantity" class="form-label">Số lượng:</label>
-            <div class="quantity">
-              <button>-</button>
-              <input type="text" value="1" />
-              <button>+</button>
-            </div>
-          </div>
-        </div>
+                      <div class="mb-4 d-flex align-items-center gap-3">
+                <div>
+                  <label for="quantity" class="form-label">Số lượng:</label>
+                  <div class="quantity">
+                    <button class="btn-decrease">−</button>
+                    <input type="text" id="quantity-input" value="1" />
+                    <button class="btn-increase">+</button>
+                  </div>
+                </div>
+              </div>
         <button id="addToCartBtn" class="btn btn-primary btn-lg mt-4">
           <i class="bi bi-cart-plus"></i> Thêm vào giỏ hàng
         </button>
@@ -337,7 +337,7 @@
             <div
               class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4"
             >
-              <a href="index.html" class="navbar-brand">
+              <a href="loggedin.html" class="navbar-brand">
                 <h1 class="m-0 text-uppercase text-white">
                   <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i
                   >CakeZone
@@ -363,7 +363,7 @@
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-envelope-open text-primary me-2"></i>
-                  <p class="mb-0">info@example.com</p>
+                  <p class="mb-0">cakezone@gmail.com</p>
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-telephone text-primary me-2"></i>
@@ -390,19 +390,19 @@
               <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                 <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                 <div class="d-flex flex-column justify-content-start">
-                  <a class="text-secondary mb-2" href="index.html"
+                  <a class="text-secondary mb-2" href="loggedin.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Trang
                     chủ</a
                   >
-                  <a class="text-secondary mb-2" href="pages/about.html"
+                  <a class="text-secondary mb-2" href="about-logged.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Giới
                     thiệu</a
                   >
-                  <a class="text-secondary mb-2" href="pages/team.html"
+                  <a class="text-secondary mb-2" href="team-logged.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp
                     chính</a
                   >
-                  <a class="text-secondary mb-2" href="pages/contact.html"
+                  <a class="text-secondary mb-2" href="contact-logged.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Liên
                     hệ</a
                   >
@@ -491,6 +491,24 @@
       });
     });
   </script>
+  <!-- Script tăng giảm số lượng sản phẩm -->
+        <script>
+          const decreaseBtn = document.querySelector(".btn-decrease");
+          const increaseBtn = document.querySelector(".btn-increase");
+          const quantityInput = document.getElementById("quantity-input");
+
+          increaseBtn.addEventListener("click", () => {
+            let value = parseInt(quantityInput.value) || 0;
+            quantityInput.value = value + 1;
+          });
+
+          decreaseBtn.addEventListener("click", () => {
+            let value = parseInt(quantityInput.value) || 0;
+            if (value > 1) {
+              quantityInput.value = value - 1;
+            }
+          });
+        </script>
 </body>
 
 </html>
