--- a/pages/wedding-cake-3-logged.html
+++ b/pages/wedding-cake-3-logged.html
@@ -62,7 +62,7 @@
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
             <h6 class="text-uppercase mb-1">Email</h6>
-            <span>info@example.com</span>
+            <span>cakezone@gmail.com</span>
           </div>
         </div>
       </div>
@@ -465,7 +465,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="index.html" class="navbar-brand">
+            <a href="loggedin.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -490,7 +490,7 @@
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                <p class="mb-0">info@example.com</p>
+                <p class="mb-0">cakezone@gmail.com</p>
               </div>
               <div class="d-flex mb-2">
                 <i class="bi bi-telephone text-primary me-2"></i>
@@ -508,16 +508,16 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="index.html"><i
+                <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Trang
                   chủ</a>
-                <a class="text-secondary mb-2" href="pages/about.html"><i
+                <a class="text-secondary mb-2" href="about-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Giới
                   thiệu</a>
-                <a class="text-secondary mb-2" href="pages/team.html"><i
+                <a class="text-secondary mb-2" href="team-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Đầu bếp
                   chính</a>
-                <a class="text-secondary mb-2" href="pages/contact.html"><i
+                <a class="text-secondary mb-2" href="contact-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Liên
                   hệ</a>
               </div>
